two datalines are drawn well

--- a/css/d3_styles.css
+++ b/css/d3_styles.css
@@ -105,6 +105,12 @@
     stroke: steelblue;
     stroke-width: 1px;
 }
+.dl2.line.hl {
+    fill: none;
+    stroke: darkred;
+    stroke-width: 2px;
+}
+
 
 
 
