--- a/css/d3_styles.css
+++ b/css/d3_styles.css
@@ -153,6 +153,57 @@
     stroke-width: 2px;
 }
 
+.tooltip {
+    background: #eee;
+    box-shadow: 0 0 5px #999999;
+    color: #333;
+    display: none;
+    font-size: 11px;
+    left: 10px;
+    padding: 0px;
+    position: absolute;
+    text-align: center;
+    top: 10px;
+    width: 80px;
+}
+
+.dl2.line.bracket{
+    fill: none;
+    stroke: black;
+}
+
+
+
+/*--------------------------------------------*/
+/*           DATALINE 3                      */
+/*--------------------------------------------*/
+
+/* NUCLEOTIDE TEXT */
+.dl3.text {
+    font-family: "Courier New", "Courier", "Lucida Sans Typewriter";
+    font-size: 12px;
+}
+
+.dl3.consensus {
+    font-family: "Courier New", "Courier", "Lucida Sans Typewriter";
+    font-size: 12px;
+}
+
+/* SCALE TEXT */
+.dl3.scale {
+    font-family: sans-serif;
+    font-size: 13px;
+}
+
+.dl3.bracket{
+    fill: none;
+    stroke: black;
+}
+
+.dl3.axis.y.text {
+    font-family: sans-serif;
+    font-size: 9px;
+}
 
 
 
