--- a/css/d3_styles.css
+++ b/css/d3_styles.css
@@ -1,5 +1,33 @@
 
 
+body {
+    background-color: #f8f8f8;
+}
+.login-panel {
+    margin-top: 25%;
+}
+.div-loading
+{
+    z-index: 1000;
+    padding: 75px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color:rgba(130,130,130,0.8) ;
+    width: 100%;
+    height: 100%;
+    overflow:auto;
+}
+.div-loading-image
+{
+    position:     absolute;
+    top:          50%;
+    left:         50%;
+    width:        300px;
+    height:       300px;
+    margin-left: -150px;
+    margin-top:  -150px;
+}
 
 
 
@@ -45,49 +73,33 @@
 }
 
 /* POINTS */
-
 .dl1.point {
     r:3px;
     fill:white;
     stroke:darkred;
-    stroke-width:1.5px;
+    stroke-width:2px;
+}
+.dl1.point.pressed {
+    fill:steelblue;
 }
 .dl1.point:hover {
     fill: steelblue;
 }
 .dl1.point-tip {
     line-height: 1;
-    padding: 2px;
+    padding: 3px;
     background: rgba(200, 200, 200, 0.8);
     border-radius: 2px;
     font-size: 10px;
     text-align: center;
 }
-
-/* ONTOLOGY TERMS */
-.dl1.goterm {
-    font-family: sans-serif;
-    fill: darkred;
-    }
-
-.dl1.goterm-tip{
-    font-family: sans-serif;
-    font-size: 10px;
-    color: black;
-    fill-opacity: .8;
-    background: #FEE;
-    border: 1px;
-    border-radius: 3px;
-    padding: 2px;
-    text-align: center;
-}
-
-.dl1.search_label{
+.dl1.search-label{
     fill: darkred;
     font-family: sans-serif;
     font-size: 11px;
 
 }
+
 
 
 /*--------------------------------------------*/
@@ -104,23 +116,6 @@
 .dl2.axis.x text {
     font-family: sans-serif;
     font-size: 11px;
-}
-
-/* GENE ANNOTATIONS */
-.dl2.annotation{
-    fill: #BFB;
-    fill-opacity: 1;
-}
-
-.dl2.annotation.label{
-    fill: black;
-    font-family: sans-serif;
-    font-size: 11px;
-}
-
-.dl2.annotation.arrow{
-    fill: #9F9;
-    fill-opacity: 1;
 }
 
 /* Y AXIS */
@@ -154,41 +149,99 @@
 }
 
 
+
+
+/* ---------------------- NUEVO ---------------------- */
+
+
+/* ONTOLOGY TERMS */
+.dl1.goterm {
+    font-family: sans-serif;
+    fill: darkred;
+}
+
+.dl1.goterm-tip{
+    font-family: sans-serif;
+    font-size: 10px;
+    color: black;
+    fill-opacity: .8;
+    background: #FEE;
+    border: 1px;
+    border-radius: 3px;
+    padding: 2px;
+    text-align: center;
+}
+
+
+
+/* GENE ANNOTATIONS */
+.dl2.annotation{
+    fill: #BFB;
+    fill-opacity: 1;
+}
+
+.dl2.annotation.label{
+    fill: black;
+    font-family: sans-serif;
+    font-size: 11px;
+}
+
+.dl2.annotation.arrow{
+    fill: #9F9;
+    fill-opacity: 1;
+}
+
+.tooltip {
+    background: #eee;
+    box-shadow: 0 0 5px #999999;
+    color: #333;
+    display: none;
+    font-size: 11px;
+    left: 10px;
+    padding: 0px;
+    position: absolute;
+    text-align: center;
+    top: 10px;
+    width: 80px;
+}
+
+.dl2.line.bracket{
+    fill: none;
+    stroke: black;
+}
+
+
+
 /*--------------------------------------------*/
 /*           DATALINE 3                      */
 /*--------------------------------------------*/
-.dl3.rect {
+
+/* NUCLEOTIDE TEXT */
+.dl3.text {
+    font-family: "Courier New", "Courier", "Lucida Sans Typewriter";
+    font-size: 12px;
+}
+
+.dl3.consensus {
+    font-family: "Courier New", "Courier", "Lucida Sans Typewriter";
+    font-size: 12px;
+}
+
+/* SCALE TEXT */
+.dl3.scale {
+    font-family: sans-serif;
+    font-size: 13px;
+}
+
+.dl3.bracket{
     fill: none;
+    stroke: black;
+}
+
+.dl3.axis.y.text {
+    font-family: sans-serif;
+    font-size: 9px;
 }
 
 
-/*
-    Tipos de anotaciones:
-    - gene
-    - transcript
-    - exon
-    - CDS
-    - five_prime_UTR
-    - three_prime_UTR
-    - biological_region
- */
-.dl3.line.gene {
-    fill: none;
-    stroke: grey;
-    stroke-opacity:1;
-    stroke-width: 1px;
-}
-
-.dl3.line.exon {
-    fill: none;
-    stroke: grey;
-    stroke-opacity:1;
-    stroke-width: 5px;
-}
-
-.dl3.line {
-    fill: none;
-    stroke: darkred;
-    stroke-opacity:0;
-    stroke-width: 2px;
-}
+/*------------------------------------------------------*/
