--- a/css/d3_styles.css
+++ b/css/d3_styles.css
@@ -123,6 +123,12 @@
     fill-opacity: 1;
 }
 
+.dl2.annotation.cracker{
+    fill: none;
+    stroke: #FFF;
+    stroke-width: 1px;
+}
+
 /* Y AXIS */
 .dl2.axis.y path,
 .dl2.axis.y line {
@@ -202,7 +208,7 @@
 
 .dl3.axis.y.text {
     font-family: sans-serif;
-    font-size: 9px;
+    font-size: 8px;
 }
 
 
