--- a/client/css/d3_styles.css
+++ b/client/css/d3_styles.css
@@ -1,7 +1,7 @@
 
 
 body {
-    background-color: #f8f8f8;
+    background-color: #f0f0f0;
 }
 .login-panel {
     margin-top: 25%;
@@ -25,6 +25,25 @@ body {
     height:       300px;
     margin-left: -150px;
     margin-top:  -150px;
+}
+
+
+
+.chromosome-tooltip {
+    display:none;
+    position:absolute;
+    border:1px solid #333;
+    background-color:#eeeeee;
+    border-radius:5px;
+    color:#fff;
+}
+.chromosome-name {
+    color:black;
+    font-family: sans-serif;
+    font-size: 11px;
+    font-weight:bold;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 
