A few tweaks after jpiriz mergins

--- a/client/css/d3_styles.css
+++ b/client/css/d3_styles.css
@@ -89,11 +89,10 @@
     text-align: center;
 }
 
-.dl1.search_label{
+.dl1.search-label{
     fill: darkred;
     font-family: sans-serif;
     font-size: 11px;
-
 }
 
 
