--- a/client/css/d3_styles.css
+++ b/client/css/d3_styles.css
@@ -128,6 +128,11 @@ body {
     font-family: sans-serif;
     fill: darkred;
 }
+.dl1.goterm.selected {
+    font-family: sans-serif;
+    fill: darkred;
+    text-decoration: underline;
+}
 .dl1.goterm-tip{
     font-family: sans-serif;
     font-size: 10px;
@@ -139,6 +144,10 @@ body {
     padding: 2px;
     text-align: center;
 }
+.dl1.gogene {
+    stroke:darkred;
+}
+
 
 
 /*--------------------------------------------*/
