Gene2GO and other server bugs fixed

--- a/client/css/d3_styles.css
+++ b/client/css/d3_styles.css
@@ -148,6 +148,10 @@ body {
     stroke:darkred;
 }
 
+.dl1.band {
+    fill: #ffc477;
+    fill-opacity: 0.1;
+}
 
 
 /*--------------------------------------------*/
