--- a/client/css/d3_styles.css
+++ b/client/css/d3_styles.css
@@ -193,16 +193,14 @@ body {
 
 /* GENE ANNOTATIONS */
 .dl2.annotation{
-    fill: #BFB;
     fill-opacity: 1;
 }
 .dl2.annotation.label{
-    fill: black;
+    fill: #111;
     font-family: sans-serif;
     font-size: 11px;
 }
 .dl2.annotation.arrow{
-    fill: #9F9;
     fill-opacity: 1;
 }
 .dl2.annotation.cracker{
