--- a/client/css/d3_styles.css
+++ b/client/css/d3_styles.css
@@ -72,8 +72,16 @@ body {
 /* LINE */
 .dl1.line {
     fill: none;
-    stroke: steelblue;
+/*    stroke: steelblue;*/
     stroke-width: 1px;
+}
+
+.dl1.title {
+/*    fill: steelblue;*/
+    /*stroke: steelblue;
+    stroke-width: 1px;*/
+    font-family: sans-serif;
+    font-size: 13px;
 }
 
 /* POINTS */
@@ -140,8 +148,10 @@ body {
 
 .dl1.band {
     stroke: #ffc477;
-    stroke-opacity: 0.3;
+    stroke-opacity: 0.5;
+    stroke-dasharray: "10,3";
     fill-opacity: 0.3;
+    fill:none;
 }
 
 .dl1.band.letter {
