--- a/client/css/d3_styles.css
+++ b/client/css/d3_styles.css
@@ -208,6 +208,12 @@ body {
     fill: #999;
 }
 
+.dl2.title {
+    font-family: sans-serif;
+    font-size: 13px;
+}
+
+
 
 /* LINE */
 .dl2.line {
