--- a/client/css/d3_styles.css
+++ b/client/css/d3_styles.css
@@ -72,8 +72,8 @@ body {
 /* LINE */
 .dl1.line {
     fill: none;
-/*    stroke: steelblue;*/
     stroke-width: 1px;
+    stroke-opacity: .6;
 }
 
 .dl1.title {
@@ -161,6 +161,13 @@ body {
     font-family: sans-serif;
     font-size: 11px;
 }
+
+.dl1.rect
+    {
+    width: 10px;
+    height: 10px;
+    stroke: lightgrey;
+    }
 
 /*--------------------------------------------*/
 /*           DATALINE 2                      */
